# pixa

./: .gitignore  README.md  README_ZH.md  analysis_options.yaml  melos.yaml  pubspec.yaml
.github/workflows/: ci.yml
examples/pixa_gallery/: README.md  pubspec.yaml
examples/pixa_gallery/cockpit/: main.dart  (+1 more)
rust/: Cargo.toml
rust/pixa_core/: Cargo.toml
rust/pixa_runtime/: Cargo.toml  build.rs  build_render.rs
rust/pixa_runtime/examples/: runtime_benchmark.rs
rust/pixa_runtime/src/: lib.rs  mjpeg_video_frame.rs  webp_processor.rs
tool/: pixa_android_ci_build_env.sh  pixa_android_cockpit_ci.sh  pixa_android_cockpit_prebuild_ci.sh  pixa_android_platform_ci.sh  pixa_benchmark_report.dart  pixa_benchmark_report_self_test.dart  pixa_example_smoke.dart  pixa_example_smoke_self_test.dart  pixa_gallery_cockpit_acceptance.dart  pixa_gallery_cockpit_acceptance_self_test.dart  pixa_guard.dart  pixa_guard_self_test.dart  pixa_macos_profile_host_state.swift  pixa_native_assets_log_check.dart  pixa_native_assets_log_check_self_test.dart  pixa_platform_build.dart  pixa_platform_build_self_test.dart  pixa_platform_evidence.dart  pixa_platform_evidence_self_test.dart  pixa_platform_self_check.dart  pixa_profile_acceptance.dart  pixa_profile_acceptance_self_test.dart  pixa_profile_report.dart  pixa_profile_report_self_test.dart  pixa_pub_dependency_smoke.dart  pixa_pub_dependency_smoke_self_test.dart  pixa_release_preflight.dart  pixa_release_preflight_self_test.dart
tool/src/: pixa_profile_git_state.dart  pixa_profile_report_markdown.dart  pixa_profile_report_support.dart
(+92 files in other folders)
