[package]
name = "pixa_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
libwebp-sys = { version = "0.14.4", optional = true, default-features = true }
pixa_core = { path = "../pixa_core" }
turbojpeg-sys = { version = "1.2.0", optional = true, default-features = false, features = ["cmake"] }

[features]
default = []
jpeg-turbo-roi = ["dep:turbojpeg-sys"]
webp-roi = ["dep:libwebp-sys"]
